[project]
name = "llm-rag-toolkit"
version = "0.1.0"
description = "This project is a toolkit for building modular Retrieval-Augmented Generation (RAG) systems. It serves as a practical guide and framework for creating a conversational chatbot that answers questions grounded in a specific knowledge base. To serve as an example, a RAG system indexing and chunking HTML and PDF lecture notes is built."
readme = "README.md"
authors = [{ name = "Jakub Kucera", email = "jakubkuceradev@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "chromadb",
    "langchain",
    "langchain-chroma",
    "langchain-community",
    "langchain-litellm",
    "langchain-ollama",
    "unstructured",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]
